--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>-</title>
+    <title>H W</title>
 </head>
 <body ng-app="app">
     <app></app>
-    <script src="./bundle.js"></script>
 </body>
 </html>
