Set temp solution for uib-tabset issue

--- a/client/app/candidate/candidate.html
+++ b/client/app/candidate/candidate.html
@@ -137,6 +137,10 @@
         </span>
       </uib-tab-heading>
       <visit visit="v" candidate-name="{{vm.candidate.firstName + ' ' + vm.candidate.lastName}}"></visit>
+
+      <!--TODO: find better solution-->
+      {{$last ? vm.setActiveTab() : ''}}
+
     </uib-tab>
   </uib-tabset>
 
