--- a/client/app/candidate/candidate.html
+++ b/client/app/candidate/candidate.html
@@ -105,44 +105,16 @@
     </div>
   </form>
 
-  <uib-tabset active="vm.activeTabIndex" style="padding-top: 30px">
-    <uib-tab uib-popover="{{vm.hasOpenVisits() ? 'Already have open visit(s)' : ''}}" popover-trigger="mouseenter" disable="vm.hasOpenVisits()" ng-click="vm.hasOpenVisits() || vm.addVisit()">
-      <uib-tab-heading>
-        <i class="glyphicon glyphicon-plus"></i>
-      </uib-tab-heading>
-    </uib-tab>
-    <uib-tab ng-repeat="v in vm.candidate.visits">
-      <uib-tab-heading>
-        <i class="glyphicon glyphicon-ok" ng-if="v.closed == 'hired'"></i>
-        <i class="fa fa-user-times" ng-if="v.closed == 'rejected'"></i>
-        <i class="fa fa-hourglass-half" ng-if="!v.closed"></i>
-        {{v.general.date | amDateFormat : 'L'}}
-        <i class="fa fa-exclamation-triangle" style="color: red" ng-if="!v.isValid()"></i>
-        <span uib-dropdown on-toggle="toggled(open)">
-          <a href id="simple-dropdown" class="caret" uib-dropdown-toggle></a>
-          <ul class="uib-dropdown-menu dropdown-menu" aria-labelledby="simple-dropdown">
-            <li>
-              <a ng-click="vm.removeVisit('visit on ' +  vm.$filter('date')(v.general.date,'dd.MM.yy'), $index)">Remove</a>
-            </li>
-            <li ng-if="!v.closed">
-              <a ng-click="vm.rejectVisit(v)">Close with rejection</a>
-            </li>
-            <li ng-if="!v.closed">
-              <a ng-click="vm.hireVisit(v)">Close with hire</a>
-            </li>
-            <li ng-if="v.closed">
-              <a ng-click="vm.reopenVisit(v)">Reopen</a>
-            </li>
-          </ul>
-        </span>
-      </uib-tab-heading>
-      <visit visit="v" candidate-name="{{vm.candidate.firstName + ' ' + vm.candidate.lastName}}"></visit>
-
-      <!--TODO: find better solution-->
-      {{$last ? vm.setActiveTab() : ''}}
-
-    </uib-tab>
-  </uib-tabset>
+  <visit-tabs
+      candidate="vm.candidate"
+      active-tab-index="vm.activeTabIndex"
+      visits="vm.candidate.visits"
+      on-add-click="vm.addVisit()"
+      on-remove-click="vm.removeVisit($event)"
+      on-reject-click="vm.rejectVisit($event)"
+      on-hire-click="vm.hireVisit($event)"
+      on-reopen-click="vm.reopenVisit($event)"
+  ></visit-tabs>
 
   <div class="row" style="margin-top: 30px;">
     <div class="form-group">
