--- a/client/app/candidate/candidate.html
+++ b/client/app/candidate/candidate.html
@@ -109,6 +109,7 @@
       candidate="vm.candidate"
       active-tab-index="vm.activeTabIndex"
       visits="vm.candidate.visits"
+      has-open-visits="vm.hasOpenVisits"
       on-add-click="vm.addVisit()"
       on-remove-click="vm.removeVisit($event)"
       on-reject-click="vm.rejectVisit($event)"
